renamed image wrapper

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
    <!--Header-->
   <header>
-    <div class="imageWrapper">
+    <div class="image__wrapper">
       <img src="./assets/images/logo.svg" alt="site logo">
     </div>
     <nav>
