renamed site logo

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
    <!--Header-->
   <header>
-    <div class="imageWrapper">
-      <img src="./assets/images/logo.svg" alt="site logo">
+    <div class="image__wrapper">
+      <img src="./assets/images/logo.svg" alt="site__logo">
     </div>
     <nav>
       <ul>
